# ChangeLog for dev-ml/type-conv
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ml/type-conv/ChangeLog,v 1.34 2014/02/13 12:34:47 aballier Exp $

*type-conv-109.60.01 (13 Feb 2014)

  13 Feb 2014; Alexis Ballier <aballier@gentoo.org>
  +type-conv-109.60.01.ebuild:
  version bump

*type-conv-109.60.00 (19 Jan 2014)

  19 Jan 2014; Alexis Ballier <aballier@gentoo.org>
  +type-conv-109.60.00.ebuild:
  version bump

  19 Aug 2013; Alexis Ballier <aballier@gentoo.org>
  -type-conv-109.20.00.ebuild:
  remove old

*type-conv-109.28.00 (22 Jul 2013)

  22 Jul 2013; Alexis Ballier <aballier@gentoo.org>
  +type-conv-109.28.00.ebuild:
  version bump

  22 Jul 2013; Alexis Ballier <aballier@gentoo.org>
  -type-conv-109.08.00.ebuild, -type-conv-109.11.00.ebuild,
  -type-conv-109.14.00.ebuild, -type-conv-109.15.00.ebuild:
  remove old

*type-conv-109.20.00 (24 May 2013)

  24 May 2013; Alexis Ballier <aballier@gentoo.org>
  +type-conv-109.20.00.ebuild:
  version bump

*type-conv-109.15.00 (11 Apr 2013)

  11 Apr 2013; Alexis Ballier <aballier@gentoo.org>
  +type-conv-109.15.00.ebuild:
  version bump

*type-conv-109.14.00 (23 Mar 2013)

  23 Mar 2013; Alexis Ballier <aballier@gentoo.org>
  +type-conv-109.14.00.ebuild:
  version bump

*type-conv-109.11.00 (06 Mar 2013)

  06 Mar 2013; Alexis Ballier <aballier@gentoo.org>
  +type-conv-109.11.00.ebuild:
  version bump

  02 Mar 2013; Alexis Ballier <aballier@gentoo.org>
  -type-conv-108.00.01.ebuild, -type-conv-108.07.01.ebuild,
  -type-conv-109.07.00.ebuild:
  remove old

  25 Feb 2013; Sergei Trofimovich <slyfox@gentoo.org>
  type-conv-109.07.00.ebuild, type-conv-109.08.00.ebuild:
  Raise minimal ocaml version up to 4.0.

*type-conv-109.08.00 (08 Feb 2013)

  08 Feb 2013; Alexis Ballier <aballier@gentoo.org>
  +type-conv-109.08.00.ebuild:
  version bump

*type-conv-109.07.00 (07 Feb 2013)

  07 Feb 2013; Alexis Ballier <aballier@gentoo.org>