@@ -4,15 +4,17 @@ Hash: SHA256
 DIST type_conv-109.28.00.tar.gz 58375 SHA256 b868c88ce550178835660692d6dfab14a7d3b3b992b02669779b532e4c6c89f0 SHA512 67ddeea3630ecc0fd23c87a78787f352cfd6da56a5b2bae52a27da23b83ad9f47fdd04c0fcc48f90bcd5d6ad9ea7639dff725b68b8496bf12a2d033ed882c78f WHIRLPOOL 0a4d2176576c4ff987d9d53cc2c06a95fa431f371384d114f534072bc6514d22ff5922e8302161680d64daa08df2f8c10647fb8ec551238c2eb0cedddfce517b
 DIST type_conv-109.60.00.tar.gz 61937 SHA256 c29cdd92c8942861ec1b767f3179e8466f9f62cd8401fee0867acee592fd84fc SHA512 bbf6a9d3f99920b06e549fecc53811606b95fe09b16d6dedd88ff0260eac03b46a80c83ffd2e7ece059fa6a8ebbae0a7961ae671bd3fbda4fbba33b08ada3053 WHIRLPOOL 48b1b8f9780151b325b3be33d83671b9813bdfc309c02e51e59749417a8e7ef25ca7bf447edbfebe0f518edc0ba5269037adf24e28d0636c8a274b9fc0b16349
 DIST type_conv-109.60.01.tar.gz 61606 SHA256 fd0b1aff77c665495b240d39b7b8ef09a4c50ab959807bc50ff8d1874cccfd52 SHA512 88071cfe5d0b20ffd92f05fc57d5585ea977ff1744d153eef5987812825c83ed8b596c060609fabeba234e2df81c15a1abe4bc3ca4c3da0934d0c1df790d3773 WHIRLPOOL 5d64d6db1824af3a9e20e5ed79e1aa60629f701a1de017fe8c958a2464306231fcaef2b20d2d6b3946df7eadb86194df99d97019b4dd0330e478ca9a7b299c71
+DIST type_conv-111.13.00.tar.gz 61554 SHA256 0b101439b809a526946fd4eb1d77f0e5ac98a4e0b19c9f0d1d11caecacac462b SHA512 9999bd37d8d309e37a0abdd0f4c7729834daabbcce41f8ac14e0717e16a4879338bddeefdaae1825c26e9a517d889d44f54fa01f4da2b70bccff647450a6f73c WHIRLPOOL 7b3d900983793cb495be2fd533b4f06aa60523adbe527f3273b743a763117803590d672a3707dc4004216e5ea067f9f204eedc6290f968ad8311392970792c5d
 EBUILD type-conv-109.28.00.ebuild 807 SHA256 fb25f73b3278f42f7097d80c48162384c0a444407fc010eccb5c44680f51bb72 SHA512 aa491380bea76d9f12916ac9c35863b631e22ee27237c37557704692b5cac8448b4abc1fa36473c4ee544c7df4f57a516572042f071d38e7c082771e6e7a65c2 WHIRLPOOL 108fdd231c2461e5861a5344c9f8d088420b9215e40064be39334ff5d2bb2daa20dfcff223d7b3b664316500f922c2a25f912831e328c102a55e70b2547fc390
 EBUILD type-conv-109.60.00.ebuild 807 SHA256 f0a928c000d45cde49c86455cd2090a836b8133e5779870ea96f666f0412bcf3 SHA512 999c482b601a491cd9216ae20fd3ecf20095536539cea968f02c348b40799c81cbceaf1b7ad10bdc216de7ff9ced0d906e289ea581925462f9d89503242d8115 WHIRLPOOL fdf7696c8c2cbc6f15b9793c285379ab128cf6e9401ebeae6431310a13646be614d4b5bcd5c2542de89c4ae60a36fe592475e8676650891d688cab102c80dc1a
 EBUILD type-conv-109.60.01.ebuild 755 SHA256 970cfc057a67778fffd4b4bf6ca28d2f20391edf83cbda5bb467f4d9f109408e SHA512 c09b7ad4c76c67452abdfdfdec45e1420d64db9c23dd0cde2066f12ace1e30a1f5e69f79413e4aaa46043f89a50697f393b93915bd974ffc99134a4360379b4f WHIRLPOOL deeb581ac98713e023225be8ee62cc4b4f755377ef149ed4bc8b3af0a6f9b716dab41937d6cfcbaf8fb7a93b4d9b0416f1d468923df6d1d72018f067bcd2a67c
-MISC ChangeLog 4814 SHA256 8c27cd7b966d8b609429c03d170eb3c5d1f1a242b69a59fe3140bd81dc47754f SHA512 6753dbe5fe424145ae5e958a6598a1b4dc3fa3a678a29262aab4068979a0aadcd3aa9fac9bf6b035d51bd840083fa291126067f75381bc47216c660b59fbbcf0 WHIRLPOOL a36d44ec02c1e509a9cf1daa01119704f15955916cd461e5e406f43aa4c1dee6f9ed8f2900ba6e218a27cbd788337090aaf71e1d7c01f723c44c2c317ec3b56a
+EBUILD type-conv-111.13.00.ebuild 734 SHA256 bc38789a689f3c3dd9834cf1e998ff88fa8f49895a2c8a2dd5b320ebbce03e2d SHA512 7ff3d2103a199591528f14260cf8074d5242ac8163f490fb0194dbbddbda53c25d7b370c586008922671fd72ad2bfe4551fbca061c7063035464cbbc5b3773c5 WHIRLPOOL 358cfb6ae6fc79336b6d38c0bce318c661e2fc048f52080bbb640ac857ced54a77e3c07d907e729ebea977edf2bda1ecf1a4e563423c994bf7749bcd702c1090
+MISC ChangeLog 4949 SHA256 40a579f60612cb9b313c08b7873f3caf6a48b9f7ca65ae5d381f3d16933e2cff SHA512 558f7667df81cb4a745fcf6abecd63fa9fea1a85fc4feb1d40f5933b89f3fa1dea52181dd6ca32a648d7963da9078d81d793b6af1c57900895b3ea4600edb24b WHIRLPOOL d6c292ceab857f46c74adf6749215c5554ad2f3d5ccfabdf6288e2d962cb993c6c779f9a23d842ce2a00c49b46f4bebed46f6b7c9da19ee007dbd1fe0cb4f5d7
 MISC metadata.xml 157 SHA256 d14b8b08774f2a40f42d70ff40b1b4f1c4725e7095d702143a32909553eac799 SHA512 5e4a17ffdcc021c3d28f9ac71f8ec0b35a243e269281ba7db2e17845d7990221040ab16db6fa13c708f7d8db154d8d65d2d7f80f3a7dd84bc001449369738f2f WHIRLPOOL 79ae48d5df04eab0d90848c85d48c62b0e3901cc5c9a74d0b85de5becac5de0f55a3c9c719bf716bb757cfd8be306a222f247a0749fb346f6589893698b25c63
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iEYEAREIAAYFAlL8u+gACgkQvFcC4BYPU0oaigCaA8AFgQkR+RK6x8Zf6rHQhhBE
-0dMAoI0SOX+pY+IIobwZpWdMsVpbtVpK
-=fZwu
+iEYEAREIAAYFAlRSHMgACgkQvFcC4BYPU0r8DQCfUFn5a56xkdGvDZSFsWLYa7hW
+Qb8AoKx3pjp6BKHzJXT68io2TasHHh5o
+=EKHl
 -----END PGP SIGNATURE-----
