@@ -1,6 +1,12 @@
 # ChangeLog for dev-ml/type-conv
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ml/type-conv/ChangeLog,v 1.34 2014/02/13 12:34:47 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ml/type-conv/ChangeLog,v 1.35 2014/10/30 11:11:03 aballier Exp $
+
+*type-conv-111.13.00 (30 Oct 2014)
+
+  30 Oct 2014; Alexis Ballier <aballier@gentoo.org>
+  +type-conv-111.13.00.ebuild:
+  version bump
 
 *type-conv-109.60.01 (13 Feb 2014)
 
